Закончил выполнение дополнительного домашнего задания

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
               points="10.777832 11.2880859 10.777832 19.5527344 8.41650391 19.5527344 8.41650391 11.2880859 0.627929688 11.2880859 0.627929688 8.92675781 8.41650391 8.92675781 8.41650391 0.662109375 10.777832 0.662109375 10.777832 8.92675781 18.5664062 8.92675781 18.5664062 11.2880859" />
           </g>
         </symbol>
+        <title>play</title>
+        <symbol id="play-s" viewBox="0 0 19 19">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0L19 9.5L0 19V0Z" fill="#EEE5B5"/>
+        </symbol>
         <symbol id="full-screen" viewBox="0 0 27 27">
           <path fill-rule="evenodd" clip-rule="evenodd" d="M23.8571 0H16V3.14286H23.8571V11H27V3.14286V0H23.8571Z"
             fill="#FFF9D9" fill-opacity="0.7" />
